Fixed up the navbar a bit, moved the primary navigation outside of the navbar container otherwise the division just cant expand past navbar container boundaries, took the button for the primary nav outside of navbar container too cause otherwise once its opened it goes behind the primary nav field and becomes unclickable

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,7 @@ a {
 /* NAVIGATION BAR START */
 .navbar-container {
 	display: flex;
+	align-items: center;
 	justify-content: center;
 	margin: 0;
 	padding: 1rem 2.1875rem;
@@ -71,6 +72,18 @@ a {
 
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
+
 .mobile-nav-toggle {
 	display:none;
 }
@@ -79,12 +92,15 @@ a {
 }
 .primary-navigation {
 	display:flex;
-	list-style:none;
+	position: fixed;
+	top: 10px;
+	list-style: none;
 	padding: 0;
 	margin: 0;
 	/* height: 100vh; */
 
 	background: hsla(0, 0%, 0%, 0.75);
+	z-index: 1001;
 }
 
 .primary-navigation a{
@@ -109,23 +125,25 @@ a {
 		padding-block: 0.5rem;
 		padding-inline: clamp(3rem,10vw, 10rem);
 	}
+
 }
+
 
 @media (max-width: 768px){
 	.primary-navigation {
 		position: fixed;
-		inset: 0 60% 0 0;
+		inset: 0 70% 0 0;
 
 		flex-direction: column;
-		padding: min(30vh, 10rem) 2em;
+		padding: min(30vh, 4rem) 1.5em;
 
-		transform: translateX(-100%);
-		transition: transform 350ms ease-out;
+		transform: translateX(100%);
+		transition: transform 350ms ease-in;
 	}
 
 	.mobile-nav-toggle {
 		display: block;
-		position:absolute;
+		position:fixed;
 		z-index:9999;
 		background: url("../public/Hamburger_icon.png");
 		background-color: transparent;
@@ -138,12 +156,16 @@ a {
 		top: 1.5rem;
 		left: 1.5rem;
 	}
+	.logo{
+		width: 100%;
+	}
+
 }
 
 .navbar-inner-cont {
 	display: flex;
 	justify-content: space-between;
-	/* width: 60%; */
+	width: 100%;
 }
 .nav-container {
 	display: flex;
